--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.echocat</groupId>
-    <artifactId>jopus</artifactId>
+    <artifactId>jogg</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>echocat JOpus</name>
+    <name>echocat JOgg</name>
     <packaging>nar</packaging>
-    <url>https://github.com/echocat/jopus</url>
-    <description>Java binding to native opus encoder/decoder.</description>
+    <url>https://github.com/echocat/jogg</url>
+    <description>Java binding to native ogg container library.</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -48,6 +48,11 @@
             <name>Gregor Noczinski</name>
             <id>gregor.noczinski</id>
             <email>gregor@noczinski.eu</email>
+        </developer>
+        <developer>
+            <name>Christian Rijke</name>
+            <id>christian.rijke</id>
+            <email>christian.rijke@teufel.de</email>
         </developer>
     </developers>
 
@@ -121,12 +126,6 @@
                         <includes>
                             <include>c/*.c</include>
                             <include>c/ogg/*.c</include>
-                            <include>c/opus/*.c</include>
-                            <include>c/opus/celt/*.c</include>
-                            <include>c/opus/celt/x86/*.c</include>
-                            <include>c/opus/silk/*.c</include>
-                            <include>c/opus/silk/float/*.c</include>
-                            <include>c/opus-tools/*.c</include>
                         </includes>
                         <excludes>
                             <exclude>c/opus/opus_demo.c</exclude>
@@ -137,16 +136,9 @@
 
                             <includePath>${basedir}/src/main/c</includePath>
                             <includePath>${basedir}/src/main/c/ogg</includePath>
-                            <includePath>${basedir}/src/main/c/opus</includePath>
-                            <includePath>${basedir}/src/main/c/opus/celt</includePath>
-                            <includePath>${basedir}/src/main/c/opus/celt/x86</includePath>
-                            <includePath>${basedir}/src/main/c/opus/silk</includePath>
-                            <includePath>${basedir}/src/main/c/opus/silk/float</includePath>
-                            <includePath>${basedir}/src/main/c/opus-tools</includePath>
 
                             <includePath>${basedir}/src/main/include</includePath>
                             <includePath>${basedir}/src/main/include/ogg</includePath>
-                            <includePath>${basedir}/src/main/include/opus</includePath>
                         </includePaths>
                         <debug>true</debug>
                         <options>
@@ -186,7 +178,7 @@
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/echocat/jopus/issues</url>
+        <url>https://github.com/echocat/jogg/issues</url>
     </issueManagement>
 
     <repositories>
@@ -204,9 +196,9 @@
     </pluginRepositories>
 
     <scm>
-        <connection>scm:git:git@github.com:echocat/jopus.git</connection>
-        <developerConnection>scm:git:git@github.com:echocat/jopus.git</developerConnection>
-        <url>https://github.com/echocat/jopus</url>
+        <connection>scm:git:git@github.com:echocat/jogg.git</connection>
+        <developerConnection>scm:git:git@github.com:echocat/jogg.git</developerConnection>
+        <url>https://github.com/echocat/jogg</url>
         <tag>HEAD</tag>
     </scm>
 
