--- a/pom.xml
+++ b/pom.xml
@@ -82,11 +82,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
-                    <forkMode>once</forkMode>
-                    <useFile>false</useFile>
-                    <argLine>
-                        -Djava.library.path=${project.build.directory}${file.separator}nar${file.separator}${project.artifactId}-${project.version}-amd64-Windows-msvc-jni${file.separator}lib${file.separator}amd64-Windows-msvc${file.separator}jni
-                    </argLine>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
             <plugin>
