--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
                 <plugin>
                     <groupId>com.github.maven-nar</groupId>
                     <artifactId>nar-maven-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -123,15 +123,23 @@
                             <include>c/ogg/*.c</include>
                         </includes>
                         <includePaths>
-                            <includePath>${env.JAVA_HOME}/include</includePath>
-                            <includePath>${env.JAVA_HOME}/include/win32</includePath>
-
-                            <includePath>${basedir}/src/main/c</includePath>
-                            <includePath>${basedir}/src/main/c/ogg</includePath>
-
-                            <includePath>${basedir}/src/main/include</includePath>
-                            <includePath>${basedir}/src/main/include/ogg</includePath>
+                            <includePath>
+                                <path>${basedir}/src/main/c</path>
+                            </includePath>
+                            <includePath>
+                                <path>${basedir}/src/main/c/ogg</path>
+                            </includePath>
+                            <includePath>
+                                <path>${basedir}/src/main/include</path>
+                            </includePath>
+                            <includePath>
+                                <path>${basedir}/src/main/include/ogg</path>
+                            </includePath>
                         </includePaths>
+                        <systemIncludePaths>
+                            <systemIncludePath>${env.JAVA_HOME}/include</systemIncludePath>
+                            <systemIncludePath>${env.JAVA_HOME}/include/win32</systemIncludePath>
+                        </systemIncludePaths>
                         <debug>true</debug>
                         <options>
                             <option>/FS</option>
