--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,8 @@
                     <libraries>
                         <library>
                             <type>jni</type>
+                            <linkCPP>false</linkCPP>
+                            <narSystemPackage>org.echocat.jogg</narSystemPackage>
                         </library>
                     </libraries>
                     <c>
@@ -173,6 +175,11 @@
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
             <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scijava</groupId>
+            <artifactId>native-lib-loader</artifactId>
+            <version>2.0.2</version>
         </dependency>
     </dependencies>
 
